/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.multiraft.atomic.countermap.v1;

import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

message AtomicCounterMapListener {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
    string key = 2;
}

message AtomicCounterMapInput {
    oneof input {
        SizeInput size = 1;
        SetInput set = 2;
        InsertInput insert = 3;
        UpdateInput update = 4;
        IncrementInput increment = 5;
        DecrementInput decrement = 6;
        GetInput get = 7;
        RemoveInput remove = 8;
        ClearInput clear = 9;
        LockInput lock = 10;
        UnlockInput unlock = 11;
        EntriesInput entries = 12;
        EventsInput events = 13;
    }
}

message AtomicCounterMapOutput {
    oneof output {
        SizeOutput size = 1;
        SetOutput set = 2;
        InsertOutput insert = 3;
        UpdateOutput update = 4;
        IncrementOutput increment = 5;
        DecrementOutput decrement = 6;
        GetOutput get = 7;
        RemoveOutput remove = 8;
        ClearOutput clear = 9;
        LockOutput lock = 10;
        UnlockOutput unlock = 11;
        EntriesOutput entries = 12;
        EventsOutput events = 13;
    }
}

message SizeInput {

}

message SizeOutput {
    uint32 size = 1;
}

message SetInput {
    string key = 1;
    int64 value = 2;
}

message SetOutput {
    int64 prev_value = 1;
}

message InsertInput {
    string key = 1;
    int64 value = 2;
}

message InsertOutput {

}

message UpdateInput {
    string key = 1;
    int64 value = 2;
    int64 prev_value = 3;
}

message UpdateOutput {
    int64 prev_value = 1;
}

message IncrementInput {
    string key = 1;
    int64 delta = 2;
}

message IncrementOutput {
    int64 prev_value = 1;
}

message DecrementInput {
    string key = 1;
    int64 delta = 2;
}

message DecrementOutput {
    int64 prev_value = 1;
}

message GetInput {
    string key = 1;
}

message GetOutput {
    int64 value = 1;
}

message RemoveInput {
    string key = 2;
    int64 prev_value = 3;
}

message RemoveOutput {
    int64 value = 1;
}

message ClearInput {

}

message ClearOutput {

}

message LockInput {
    repeated string keys = 1;
    google.protobuf.Duration timeout = 2 [
        (gogoproto.stdduration) = true
    ];
}

message LockOutput {

}

message UnlockInput {
    repeated string keys = 1;
}

message UnlockOutput {

}

message EntriesInput {
    bool watch = 1;
}

message EntriesOutput {
    Entry entry = 1 [
        (gogoproto.nullable) = false
    ];
}

message EventsInput {
    string key = 1;
}

message EventsOutput {
    Event event = 1 [
        (gogoproto.nullable) = false
    ];
}

message Event {
    string key = 1;

    oneof event {
        Inserted inserted = 2;
        Updated updated = 3;
        Removed removed = 4;
    }

    message Inserted {
        int64 value = 1;
    }

    message Updated {
        int64 value = 1;
        int64 prev_value = 2;
    }

    message Removed {
        int64 value = 1;
    }
}

message Entry {
    string key = 1;
    int64 value = 2;
}
